Fixed the navigation animation out of bounds.

--- a/_src/less/partial/navigation.less
+++ b/_src/less/partial/navigation.less
@@ -41,7 +41,7 @@
 }
 
 #layout.active .nav-link {
-  -webkit-transform: translate(-20px) rotateY(0deg);
+  -webkit-transform: translate(-40px) rotateY(0deg);
   transition: 0.5s;
 }
 
@@ -98,7 +98,7 @@
       }
   
       &:hover {
-        -webkit-transform: translate(0px) !important;
+        -webkit-transform: translate(-20px) !important;
       }
   
     }
